@@ -6,6 +6,6 @@ includedir=@includedir@
 Name: @PACKAGE_NAME@
 Description: GTK+ 2.0 Source Editing Widget
 Version: @PACKAGE_VERSION@
-Requires: glib-2.0 gdk-2.0 gtk+-2.0 libxml-2.0 libgnome-2.0
+Requires: glib-2.0 gdk-2.0 gtk+-2.0 libxml-2.0
 Libs: -L${libdir} -lgtksourceview-1.0
 Cflags: -I${includedir}/gtksourceview-1.0
