@@ -1,3 +1,15 @@
+2003-05-13  Michael Terry  <mterry@fastmail.fm>
+
+	* Makefile.am, configure.in, gtksourceview-1.0.pc.in,
+	  gtksourceview/Makefile.am, 
+	  gtksourceview/gtksourcelanguage-private.h,
+	  gtksourceview/gtksourcelanguagesmanager.c,
+	  gtksourceview/gtksourcetagtable.c,
+	  gtksourceview/gtksourceview-i18n.c, tests/Makefile.am:
+	  Removed dependency on libgnome from gtksourceview code.
+	* configure.in: Allowed the tests to not be built, via a 
+	  --disable-build-tests configure flag.
+
 2003-05-13  Paolo Maggi  <paolo.maggi@polito.it>
 
 	* gtksourceview/language-specs/c.lang: highlight files as vim
